Bugfixing and functionality fixing: - Added and fixed not being able to change names of sprints - Added update funktionality to sprints - Added and changed funcktionality of how sprint ID is given to a sprint, so that now it is unique pr project_ID and auto increments pr project_ID - Fixed background colours on createsprint.html - Fixed background colours on updatesprint.html - Fixed invisible text bug on sprints.html - Fixed required input parameter sprint_id is now required

--- a/src/main/resources/static/css/cssstyles.css
+++ b/src/main/resources/static/css/cssstyles.css
@@ -357,6 +357,7 @@ label .logo-link{
     background: rgb(7,84,2);
     background: linear-gradient(90deg, rgba(7,84,2,1) 0%, rgba(7,107,2,1) 54%, rgba(27,158,41,1) 100%);
     background-repeat: no-repeat;
+    min-height: 100vh;
 }
 
 
@@ -932,7 +933,11 @@ p{
 .sprint-headline {
     width: 80%;
     margin: 0 auto;
-    color: white;
+}
+
+.sprint-headline h1
+{
+    color: #FFFFFF;
 }
 
 
